--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pawan's Personal Website</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -55,7 +56,7 @@
   </ul>
   <hr>
   <h3>Work Experience</h3>
-  <table border = 1>
+  <table cellspacing = 10>
     <thead>
       <tr>
         <th>Year</th>
